# health-recovery-tracker

./: .gitignore  README.ja.md  README.ko.md  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  pr-governance.yml
backend/: README.md  health_v2.db  pyproject.toml
backend/app/: __init__.py  main.py  migrate_cli.py  models.py  schemas.py
backend/app/api/: __init__.py  recovery.py  sessions.py
backend/app/services/: parser.py  recovery_engine_v0.py
backend/app/workers/: __init__.py  process_upload.py
backend/health_v2_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: 0001_create_uploads.py  0002_convert_uploads_id_to_uuid.py  0003_add_upload_file_metadata.py  0004_add_upload_error_message.py  0005_add_sessions_and_ocr_text.py  0006_add_muscle_groups_and_exercise_muscles.py
backend/tests/: test_health_api.py  test_muscle_schema_seed.py  test_parser_fleek_ocr_v1.py  test_recovery_api.py  test_recovery_api_hardening.py  test_recovery_engine_v0.py  test_sessions_api.py  test_upload_api.py  test_worker_process_upload.py
cloudflare-api/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
cloudflare-api/migrations/: 0001_init.sql  0002_runtime_tables.sql
docs/: ARCHITECTURE.md  ARCHITECTURE_MAP.ko.md  BEGINNER_GUIDE.ko.md  BRANCH_PROTECTION.md  CLOUDFLARE_DEPLOY.md  RECOVERY_ALGORITHM.md  RELEASE_CHECKLIST.md  REPO_SEPARATION_GUIDE.md  TESTING.md
frontend/: .env.production  README.md  index.html  package-lock.json  package.json  tsconfig.json  wrangler.toml
infra/: docker-compose.yml
(+52 files in other folders)
